--- a/less/featured.less
+++ b/less/featured.less
@@ -214,15 +214,6 @@
                             
                         }
 
-                        #mewtwo{
-                            height: 37rem; 
-                            margin-top: -3rem;
-
-                            @media @tablet{
-                                height: 30rem;
-                            }
-                        }
-
                         #jigglypuff{
                             height: 25rem; 
                             margin-right: 5rem;
@@ -234,7 +225,7 @@
 
                         .background{
                             z-index: -1;
-                            height: 100rem;
+                            height: 90rem;
                             position: absolute;
                             margin-top: -60rem;
                             margin-left: 0;
@@ -266,7 +257,7 @@
                             margin-right: 0;
                             margin-top: -14rem;
                             border-radius: 10px;
-                            margin-left: 5rem;
+                            margin-left: 4rem;
                             // border: 2px solid rgb(218, 218, 218);
                             padding: 10px;
                             padding-top: 1rem;
@@ -304,15 +295,25 @@
                             }
 
                             @media @phone{
-                                margin-top: -6rem;
+                                margin-top: -8rem;
                                 text-align: center;
                                 align-self: center;
-                                font-size: 1.5rem;
+                                font-size: 1.4rem;
                                 width: 100%;
                                 vertical-align: middle;
                             }
                             
                     
+                        }
+
+                        #mewtwo{
+                            height: 20rem; 
+                            margin-top: -12rem;
+
+                            @media @tablet{
+                                height: 18rem;
+                                margin-top: -2rem;
+                            }
                         }
 
                     
